# primer-studio

./: .gitignore  LICENSE  README.md  prompt.md  pyproject.toml
src/primer_designer/: __init__.py  batch_designer.py  cli.py  config.py  fasta_reader.py  models.py  primer.py  utils.py
test_data/: at_rich_test.fasta  gc_rich_test.fasta  generate_test_data.py  large_batch_test.fasta  long_sequences_test.fasta  realistic_genes_test.fasta  single_sequence_test.fasta  small_sequences_test.fasta  standard_test.fasta
tests/: test_primer.py
